--- a/src/components/project.scss
+++ b/src/components/project.scss
@@ -2,3 +2,38 @@
     background-color: #16192B;
 }
 
+/* Media Query */
+
+// Xiaomi Redmi 8 Note Pro
+@media only screen and (min-width: 393px) and (orientation: portrait) { 
+    /* Your Styles... */ 
+
+}
+
+// Samsung A50
+@media only screen and (min-width: 412px) and (orientation: portrait) { 
+  /* Your Styles... */ 
+
+}
+
+// iPhone 6 and 7
+@media only screen and (min-width: 375px) and (orientation: portrait) { 
+  /* Your Styles... */ 
+  .ProjectCards {
+
+    #description {
+        max-width: 175px;
+    }
+    
+    #images {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        width: 100%;
+    }
+
+    #titles {
+        max-width: 110px;
+    }
+  }
+}
